[package]
name = "kava"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.5"
tao = "0.31.1"
tray-icon = { path="crates/tray-icon" }
windows = { version = "0.59.0", features=["Win32_System_Power", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Registry"] }
windows-registry = "0.4.0"
